--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movies database</title>
     <link rel="stylesheet" href="style.css" />
+
+    <link rel="icon" href="image/madoka-icon.gif" type="image/icon type" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-
-    <style></style>
   </head>
   <body>
     <nav class="navbar">
@@ -19,21 +19,11 @@
           <div class="navbar-left">
             <!-- Responsive Design -->
             <i class="bi bi-list" id="menuToggle"></i>
-            <div class="overlay" id="overlay"></div>
 
-            <div class="mobile-content-left" id="mobileMenu">
-              <div class="navbar-icon">
-                <img src="image/madoka-icon.gif" alt="Icon" />
-                <span class="logo-title">NokaFilm</span>
-              </div>
-              <a href="/">Home</a>
-              <a href="/">Stream</a>
-              <a href="/">Shop</a>
-            </div>
             <!-- Responsive Design -->
 
             <div class="navbar-icon">
-              <img src="image/madoka-icon.gif" alt="Icon" />
+              <img src="image/madoka-icon.gif" alt="Icon" class="img-icon" />
               <span class="logo-title">NokaFilm</span>
             </div>
             <div class="navbar-content-left">
@@ -41,16 +31,6 @@
               <a href="/">Stream</a>
               <a href="/">Shop</a>
             </div>
-
-            <!-- Responsive Design -->
-            <div class="navbar-mobile">
-              <div class="navbar-content-right">
-                <a href="/">Home</a>
-                <a href="/">Stream</a>
-                <a href="/">Shop</a>
-              </div>
-            </div>
-            <!-- Responsive Design -->
           </div>
           <div class="navbar-right">
             <div class="navbar-search">
@@ -59,7 +39,7 @@
                 class="form-control input-keyword"
                 placeholder="Search Movies..."
               />
-              <i class="bi bi-search search-button"></i>
+              <i class="bi bi-search search-button" id="searchButton"></i>
             </div>
             <div class="navbar-content-right">
               <a href="" class="nav-bookmark">
@@ -73,14 +53,39 @@
               </a>
             </div>
           </div>
-          <div class="navbar-mobile-right">
-            <i class="bi bi-search"></i>
-            <img src="image/madoka_pfp.jpg" alt="" class="img-pp" />
-          </div>
         </div>
       </div>
-    </nav>
+      <div class="overlay-navbar" id="overlayNavbar"></div>
 
+      <div class="mobile-content-left asides" id="mobileMenu">
+        <div class="navbar-icon">
+          <img src="image/madoka-icon.gif" alt="Icon" class="img-icon" />
+          <span class="logo-title">NokaFilm</span>
+        </div>
+        <div class="mobile-box-left"></div>
+        <a href="/"><i class="bi bi-house-door-fill"></i>Home</a>
+        <a href="/"><i class="bi bi-heart"></i>Favorite</a>
+        <a href="/"><i class="bi bi-list-ul"></i>Watchlist</a>
+        <a href="/"><i class="bi bi-clock-history"></i>History</a>
+        <a href="/"><i class="bi bi-person-circle"></i>Profile</a>
+      </div>
+      <div class="navbar-mobile-right">
+        <div class="navbar-search-mobile">
+          <input
+            type="text"
+            class="form-control input-keyword-mobile"
+            placeholder="Search..."
+          />
+          <i
+            class="bi bi-search search-button-mobile"
+            id="searchButtonMobile"
+          ></i>
+        </div>
+        <i class="bi bi-search search-button-nav-mobile"></i>
+        <img src="image/madoka_pfp.jpg" alt="" class="img-pp" />
+      </div>
+    </nav>
+    <div class="overlay-global" id="overlayGlobal"></div>
     <div class="row-film mt-4 container-film"></div>
 
     <!-- Awal Modal -->
